# HardwareTest

./: .cproject  .project  CMakeLists.txt
Debug/: makefile
Include/: C674xTypes.h  Codec.h  CodecAIC3106.h  Ultratec.h  Ultratec_Enums.h  WiFiChannelDef.h  WiFi_test.h  i2c_test.h
Include/ADT Libraries/ADT_G729AB_CortexA55_V3_06_06/: release_notes.txt
Include/ADT Libraries/ADT_G729AB_CortexA55_V3_06_06/G729AB/include/: g729ab_user.h
Include/ADT Libraries/AES_ADT_CortexA55_V4_00_02/: release_notes.txt
Include/ADT Libraries/AES_ADT_CortexA55_V4_00_02/aes/include/: aes_adt_user.h
Include/ADT Libraries/AGC_ADT_CortexA55_V3_09_00/: release_notes.txt
Include/ADT Libraries/AGC_ADT_CortexA55_V3_09_00/agc/include/: agc_user.h
Include/ADT Libraries/G168_ADT_CortexA55_V11_19_11/: release_notes.txt
Include/ADT Libraries/G168_ADT_CortexA55_V11_19_11/common/include/: adt_typedef_user.h
Include/ADT Libraries/G168_ADT_CortexA55_V11_19_11/g168/include/: align.h  g168_user.h
Include/ADT Libraries/HDAEC_ADT_CORTEXA55_V6_01_07/: release_notes.txt
Include/ADT Libraries/HDAEC_ADT_CORTEXA55_V6_01_07/aecg4/include/: iaecg4.h
Include/ADT Libraries/HDAEC_ADT_CORTEXA55_V6_01_07/common/include/: adt_typedef_user.h
Include/ADT Libraries/HDAEC_ADT_CORTEXA55_V6_01_07/common/xdais_test/: alg_malloc.c
Include/ADT Libraries/HDAEC_ADT_CORTEXA55_V6_01_07/common/xdm_packages/ti/xdais/: std.h
Include/ADT Libraries/NR2_ADT_CortexA55_V3_04_02/: release_notes.txt
Include/ADT Libraries/NR2_ADT_CortexA55_V3_04_02/NR2/include/: nradt_user.h
Include/ADT Libraries/VADCNG_ADT_CortexA55_V5_04_01/: release_notes.txt
Include/ADT Libraries/VADCNG_ADT_CortexA55_V5_04_01/vadcng/include/: vadcng_user.h
src/: Audio_Test.c  Backlight_test.c  CodecAIC3106.c  Codec_Test.c  GPIO_Test.c  HardwareTest.c  Keyboard_Test.c  Keyboard_Test_Alternative.c  LED_test.c  RTC_test.c  Touchscreen.c  WiFi_Test.c  i2c_test.c
